enhance main window settings with title and size constraints

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Simsify Life</title>
   </head>
   <body>
+    <div class="titlebar">Skills Time Tracker</div>
     <div id="root"></div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
